# runningTotals-benchmark

./: README.md  Scans.cabal  Scans.hs
